--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -35,10 +35,10 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_spinkit: ^5.0.0
   provider: ^5.0.0
-  firebase: ^9.0.1
-  firebase_auth: ^3.0.2
-  firebase_core: ^1.5.0
-  cloud_firestore: ^2.5.0
+  firebase: 
+  firebase_auth: 
+  firebase_core: 
+  cloud_firestore: 
 
 dev_dependencies:
   flutter_test:
